<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-37dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/SearchByLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Search"
                android:text="@string/SearchByLocation" />

            <Button
                android:id="@+id/SearchByPostCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Search"
                android:text="@string/SearchByPostcode" />

            <EditText
                android:id="@+id/enterPostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/EnterPostcode" />

            <Button
                android:id="@+id/SearchByName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="57dp"
                android:onClick="Search"
                android:text="@string/SearchByName" />

            <EditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="91dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/EnterName" />

            <Button
                android:id="@+id/showRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Search"
                android:text="@string/ShowRecent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="11dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:text="0" />

            <EditText
                android:id="@+id/testBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="33dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>